--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   },
   "dependencies": {
     "babel-preset-stage-1": "^6.1.18",
+    "eslint": "^3.14.1",
+    "global": "^4.3.1",
     "lodash": "^3.10.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
