--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
     "axios": "^0.15.3",
     "babel-preset-stage-1": "^6.1.18",
     "eslint": "^3.14.1",
+    "eslint-config-airbnb": "^14.0.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "latest",
+    "eslint-plugin-react": "latest",
     "global": "^4.3.1",
     "lodash": "^3.10.1",
     "react": "^0.14.3",
